# jax-nufft

./: .gitignore  AGENTS.md  LICENSE  README.md  pixi.toml  pyproject.toml
.github/workflows/: test.yml
docs/: v0.1.1-plan.md  v0.1.2-plan.md  v0.2-plan.md
docs/benchmarks/: README.md  v0.1.2-baseline-gh200.json  v0.1.2-baseline-gpu.json  v0.1.2-part1.json
src/jax_nufft/: __init__.py  _types.py  _utils.py  kernel.py  planning.py  wgridder.py
tests/: bench_harness.py  conftest.py  test_adjoint.py  test_against_dft.py  test_against_ducc.py  test_auto_strategy.py  test_auto_strategy_acceptance.py  test_bench_harness.py  test_benchmark_against_ducc.py  test_benchmark_gpu.py  test_boundary_planes.py  test_constant_w.py  test_jax_integration.py  test_kernel.py  test_planning.py  test_smoke.py
