[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jax-nufft"
version = "0.1.1"
description = "Pure-JAX wgridder for radio interferometric imaging, built on jax-finufft."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "jax-nufft contributors" },
]
keywords = [
    "radio-astronomy",
    "interferometry",
    "wgridder",
    "nufft",
    "jax",
    "finufft",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "jax>=0.5.0",
    "jax-finufft>=1.3.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-benchmark>=4.0",
    "ducc0>=0.34",
    "psutil>=5.9",
]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/chrisfinlay/jax-nufft"
Issues = "https://github.com/chrisfinlay/jax-nufft/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jax_nufft"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "NPY", # numpy-specific
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line-length handled by formatter
    "B008",  # function call in default arg (common in jax)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # allow assert False in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:jax.*",
    "ignore::PendingDeprecationWarning:jax.*",
]

[tool.mypy]
python_version = "3.10"
strict_optional = true
warn_unused_configs = true
warn_redundant_casts = true
ignore_missing_imports = true
